fix play button colour on ios

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -29,6 +29,7 @@ input,
 button {
 	font: inherit;
 	min-width: 0;
+	color: inherit;
 }
 
 .sr-only {
